<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.yun.yunmaster.base.NavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.yun.yunmaster.base.NavigationBar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/navigationBar"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color2"
                android:textSize="18sp"
                android:text="真实姓名"
                />


            <com.yun.yunmaster.view.ClearEditText
                android:id="@+id/et_truename"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="请输入真实姓名"
                android:lines="1"
                android:inputType="text"
                android:maxLength="10"
                android:textColor="@color/color2"
                android:textColorHint="@color/color9"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:background="@color/line_color"
                android:layout_height="@dimen/line_height"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/color2"
                android:textSize="18sp"
                android:text="身份证号码"
                />

            <com.yun.yunmaster.view.ClearEditText
                android:id="@+id/et_id_no"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="请输入身份证号码"
                android:inputType="text"
                android:lines="1"
                android:digits="1234567890X"
                android:maxLength="18"
                android:textColor="@color/color2"
                android:textColorHint="@color/color9"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:background="@color/line_color"
                android:layout_height="@dimen/line_height"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/color2"
                    android:textSize="18sp"
                    android:text="@string/id_card_photo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="(正反两张照片)"
                    android:textSize="12sp"
                    android:textColor="@color/color9"
                    android:drawablePadding="5dp"
                    android:clickable="true"
                    />
            </LinearLayout>


            <com.yun.yunmaster.view.GridViewForScrollView
                android:id="@+id/photoGridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:columnWidth="50dp"
                android:horizontalSpacing="10dp"
                android:listSelector="@color/transparent"
                android:numColumns="2"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/color2"
                    android:textSize="18sp"
                    android:text="@string/driving_license_photo"
                    />

                <TextView
                    android:id="@+id/tv_upload_driving_license"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:text="点击上传"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:drawableLeft="@drawable/icon_add_photo"
                    android:textColor="@color/color_blue"
                    android:drawablePadding="5dp"
                    android:clickable="true"
                    />
            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_driving_license"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_list_jiashizheng_nor"
                />

                <com.flyco.roundview.RoundTextView
                    android:id="@+id/tv_submit"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:layout_marginBottom="30dp"
                    android:textSize="18sp"
                    android:text="@string/submit"
                    android:textColor="@color/common_blue_bg_textcolor"
                    app:rv_backgroundColor="@color/color_blue"
                    app:rv_backgroundPressColor="@color/color_blue_pressed"
                    app:rv_cornerRadius="5dp"
                    />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

